--- a/03_HTML5_CSS3_parte03/aulas/css/styles.css
+++ b/03_HTML5_CSS3_parte03/aulas/css/styles.css
@@ -80,6 +80,22 @@ main .produto-preco {
 	margin-top: 10px;
 }
 
+main form {
+	margin: 40px;
+}
+
+main form label {
+	display: block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+main form input {
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+}
 footer {
 	background-image: url(../images/bg.jpg);
 	text-align: center;
