--- a/03_HTML5_CSS3_parte03/aulas/css/styles.css
+++ b/03_HTML5_CSS3_parte03/aulas/css/styles.css
@@ -84,7 +84,7 @@ main form {
 	margin: 40px;
 }
 
-main form label, form p {
+main form label, form legend {
 	display: block;
 	font-size: 20px;
 	margin: 0 0 10px;
