--- a/04_HTML5_CSS3_parte04/aulas/css/styles-home.css
+++ b/04_HTML5_CSS3_parte04/aulas/css/styles-home.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 main .imagem-banner {
 	width: 100%;
 }
@@ -27,6 +31,20 @@ main .utensilios {
 	margin: 0 20px 20px 0;
 }
 
+main .mapa {
+	padding: 3em 0;
+}
+
+main .mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
 main .imagem-beneficios {
 	width: 60%;
+}
+
+main .video {
+	width: 560px;
+	margin: 1em auto;
 }
