--- a/04_HTML5_CSS3_parte04/aulas/css/styles-home.css
+++ b/04_HTML5_CSS3_parte04/aulas/css/styles-home.css
@@ -6,6 +6,13 @@ main .imagem-banner {
 	width: 100%;
 }
 
+main .principal {
+	padding: 3em 0;
+	background-color: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
 main .titulo-principal {
 	text-align: center;
 	font-size: 2em;
@@ -31,13 +38,47 @@ main .utensilios {
 	margin: 0 20px 20px 0;
 }
 
+main .mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
 main .mapa {
 	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888);
 }
 
 main .mapa p {
 	margin: 0 0 2em;
 	text-align: center;
+}
+
+main .beneficios {
+	padding: 3em 0;
+	background-color: #888;
+}
+
+main .conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+main .lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+main .iten:before {
+	content: "★";
+}
+
+main .itens {
+	line-height: 1.5;
+}
+
+main .itens:first-child {
+	font-weight: bold;
 }
 
 main .imagem-beneficios {
@@ -46,5 +87,5 @@ main .imagem-beneficios {
 
 main .video {
 	width: 560px;
-	margin: 1em auto;
+	margin: 2em auto;
 }
