--- a/07_jQuery_parte02/aulas/alura-typer/public/css/estilos.css
+++ b/07_jQuery_parte02/aulas/alura-typer/public/css/estilos.css
@@ -31,3 +31,15 @@ body {
 .placar {
 	display: none;
 }
+
+.erro {
+	color: yellow;
+	display: none;
+	font-size: 1.5em;
+	font-weight: bold;
+	background-color: #000
+}
+
+.spinner {
+	display: none;
+}
