--- a/07_jQuery_parte02/aulas/alura-typer/public/css/estilos.css
+++ b/07_jQuery_parte02/aulas/alura-typer/public/css/estilos.css
@@ -53,3 +53,16 @@ body {
 .botao-sync {
 	float: right;
 }
+
+.select-usuarios {
+	display: inline-block;
+}
+
+.usuarios {
+	display: block;
+}
+
+.select-usuarios .selectize-control .selectize-input {
+	width: 10em;
+	vertical-align: middle;
+}
