--- a/08_Web_Design_Responsivo/aulas/workshop-web-design-responsivo/css/exercicios.css
+++ b/08_Web_Design_Responsivo/aulas/workshop-web-design-responsivo/css/exercicios.css
@@ -1,3 +1,26 @@
+header {
+	padding: 0.5em 0;
+}
+
+.destaques {
+	margin-top: 1em;
+}
+
+.barra-nav {
+	margin: 0.4em 0;
+}
+
+.logo,
+.busca,
+.barra-nav,
+.menu-principal {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.menu-principal {
+	float: left;
+}
 
 .secao {
 	float: left;
@@ -7,4 +30,17 @@
 .mini {
 	float: left;
 	width: 50%;
+}
+
+.container {
+	margin: 0 auto;
+	max-width: 1200px;
+}
+
+.logo, .secao {
+	padding: 0 1%;
+}
+
+.img {
+	max-width: 100%;
 }
