--- a/09_Projeto_Conclusão/css/header.css
+++ b/09_Projeto_Conclusão/css/header.css
@@ -26,3 +26,48 @@
 	.header .main-menu .menu-item a:hover {
 		background-color: #48A3A6;
 	}
+
+.header .jumbotron {
+	padding: 0 0 44px 0;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.header .panel-main {
+	color: #FFF;
+	text-shadow: 4px 4px 10px #000;
+}
+
+.header .jumbotron .title {
+	font-size: 3em;
+}
+
+.header .jumbotron .sub-title {
+	font-size: 2.6em;
+	margin-top: 8px;
+}
+
+.header .jumbotron .button {
+	display: inline-block;
+	padding: 25px 50px;
+	margin: 5px;
+	background-color: #48A3A6;
+	border-radius: 8px;
+	box-shadow: 1px 1px 5px #000;
+	text-decoration: none;
+	font-size: 18px;
+	font-weight: bold;
+	color: #FFF;
+}
+
+.header .panel-subscribe {
+	margin-top: 28px;
+}
+
+
+@media (min-width: 650px) {
+
+	.header .jumbotron {
+		font-size: 1.75em;
+	}
+}
